// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "borderRadius": 40,
          "height": 40,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "hsl(200 40% 50%)",
        },
        undefined,
      ],
      {
        "overflow": "hidden",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "white",
        },
      ]
    }
  >
    Press me!
  </Text>
</View>
`;

exports[`renders correctly with style 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "borderRadius": 40,
          "height": 40,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "hsl(200 40% 50%)",
        },
        {
          "backgroundColor": "red",
        },
      ],
      {
        "overflow": "hidden",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "white",
        },
      ]
    }
  >
    Press me!
  </Text>
</View>
`;

exports[`renders correctly with type 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "borderRadius": 40,
          "height": 40,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "hsl(200 40% 50%)",
        },
        undefined,
      ],
      {
        "overflow": "hidden",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "white",
        },
      ]
    }
  >
    Press me!
  </Text>
</View>
`;

exports[`renders disabled state correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      [
        {
          "alignItems": "center",
          "borderRadius": 40,
          "height": 40,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "hsl(200 40% 50%)",
        },
        undefined,
      ],
      {
        "overflow": "hidden",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "white",
        },
      ]
    }
  >
    Press me!
  </Text>
</View>
`;
